section trend categories styling

--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -1,10 +1,10 @@
-.pages-home {
+.page-home {
     h5 {
         font-weight: 300;
         margin-bottom: 15px;
     }
 
-    .store-trend-categoried {
+    .store-trend-categories {
         margin-top: 30px;
     }
 
