--- a/style/main.scss
+++ b/style/main.scss
@@ -1,10 +1,10 @@
 // Import Bootstrap 4 Library
-@import "../vendor/bootstrap/scss/bootstrap.scss";
+@import '../vendor/bootstrap/scss/bootstrap.scss';
 
-@import "global";
-@import "fonts";
-@import "navbar";
+@import 'global';
+@import 'fonts';
+@import 'navbar';
 
-@import "pages/home";
-@import "components/categories";
-@import "components/products";
+@import 'pages/home';
+@import 'components/categories';
+@import 'components/products';
