--- a/style/pages/_details.scss
+++ b/style/pages/_details.scss
@@ -10,7 +10,7 @@
         border: 2px solid transparent;
 
         &:hover,
-        &:active {
+        &.active {
             border: 2px solid #ff7158;
         }
     }
