--- a/style/main.css
+++ b/style/main.css
@@ -10900,13 +10900,52 @@ footer p {
   border-radius: 10px;
 }
 
-.page-details .thumbnail-image {
+.page-details .store-galery .thumbnail-image {
   margin-bottom: 20px;
   border: 2px solid transparent;
 }
 
-.page-details .thumbnail-image:hover, .page-details .thumbnail-image.active {
+.page-details .store-galery .thumbnail-image:hover, .page-details .store-galery .thumbnail-image.active {
   border: 2px solid #ff7158;
+}
+
+.page-details .store-heading {
+  margin-bottom: 10px;
+}
+
+.page-details .store-heading h1 {
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 36px;
+  margin-bottom: 0px;
+  /* identical to box height */
+  color: #0c0d36;
+}
+
+.page-details .store-heading .owner {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  margin-bottom: 8px;
+  /* identical to box height */
+  color: #979797;
+}
+
+.page-details .store-heading .price {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  /* identical to box height */
+  color: #ff7158;
+  margin-bottom: 10px;
+}
+
+.page-details .store-description {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 180%;
+  /* or 29px */
+  color: #525252;
 }
 
 .component-categories {
