--- a/style/pages/_details.scss
+++ b/style/pages/_details.scss
@@ -4,14 +4,57 @@
         img {
             border-radius: 10px;
         }
-    }
-    .thumbnail-image {
-        margin-bottom: 20px;
-        border: 2px solid transparent;
+        .thumbnail-image {
+            margin-bottom: 20px;
+            border: 2px solid transparent;
 
-        &:hover,
-        &.active {
-            border: 2px solid #ff7158;
+            &:hover,
+            &.active {
+                border: 2px solid #ff7158;
+            }
         }
+    }
+
+    .store-heading {
+        margin-bottom: 10px;
+
+        h1 {
+            font-weight: normal;
+            font-size: 24px;
+            line-height: 36px;
+            margin-bottom: 0px;
+            /* identical to box height */
+
+            color: #0c0d36;
+        }
+
+        .owner {
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 21px;
+            margin-bottom: 8px;
+            /* identical to box height */
+
+            color: #979797;
+        }
+
+        .price {
+            font-weight: 500;
+            font-size: 18px;
+            line-height: 27px;
+            /* identical to box height */
+
+            color: #ff7158;
+            margin-bottom: 10px;
+        }
+    }
+
+    .store-description {
+        font-weight: normal;
+        font-size: 16px;
+        line-height: 180%;
+        /* or 29px */
+
+        color: #525252;
     }
 }
