--- a/style/pages/_details.scss
+++ b/style/pages/_details.scss
@@ -1,4 +1,10 @@
 .page-details {
+    h5 {
+        font-weight: normal;
+        font-size: 18px;
+        color: #0c0d36;
+    }
+
     .store-galery {
         margin-top: 20px;
         img {
@@ -56,5 +62,27 @@
         /* or 29px */
 
         color: #525252;
+    }
+
+    .store-review {
+        .media {
+            img {
+                max-width: 50px;
+            }
+        }
+        .media-body {
+            font-weight: normal;
+            font-size: 16px;
+            line-height: 180%;
+            color: #525252;
+            margin-bottom: 20px;
+
+            h5 {
+                font-weight: 500;
+                font-size: 16px;
+                line-height: 180%;
+                color: #0c0d36;
+            }
+        }
     }
 }
