--- a/style/main.scss
+++ b/style/main.scss
@@ -9,7 +9,7 @@
 @import 'pages/details';
 @import 'pages/cart';
 @import 'pages/success';
-@import 'pages/auth.scss';
+@import 'pages/auth';
 
 @import 'components/categories';
 @import 'components/products';
