--- a/style/main.css
+++ b/style/main.css
@@ -11381,6 +11381,22 @@ footer p {
   color: #0c0d36;
 }
 
+.card-dashboard-product {
+  margin-bottom: 15px;
+}
+
+.card-dashboard-product .card-body .product-title {
+  font-size: 18px;
+  line-height: 27px;
+  color: #0c0d36;
+}
+
+.card-dashboard-product .card-body .product-category {
+  font-size: 16px;
+  line-height: 24px;
+  color: #c5c5c5;
+}
+
 .card-list {
   margin-bottom: 10px;
 }
