--- a/style/main.scss
+++ b/style/main.scss
@@ -16,6 +16,7 @@
 @import 'components/products';
 @import 'components/breadcrumbs';
 @import 'components/card';
+@import 'components/card_dashboard';
 @import 'components/card_list';
 
 @import 'transitions/slide-fade';
