--- a/style/pages/_dashboard.scss
+++ b/style/pages/_dashboard.scss
@@ -123,5 +123,14 @@
                 }
             }
         }
+
+        .gallery-container {
+            .delete-gallery {
+                display: block;
+                position: absolute;
+                top: -10px;
+                right: 0;
+            }
+        }
     }
 }
